--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,20 +11,27 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.6.0",
+    "@matejmazur/react-katex": "^3.1.3",
     "@monaco-editor/react": "^4.6.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-navigation-menu": "^1.2.0",
+    "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.0",
     "@tanstack/react-query": "^5.48.0",
     "@tanstack/react-query-devtools": "^5.48.0",
+    "@types/markdown-to-jsx": "^7.0.1",
+    "@types/react-katex": "^3.0.4",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.396.0",
+    "markdown-to-jsx": "^7.4.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.0",
+    "react-katex": "^3.0.1",
     "react-markdown": "^9.0.1",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.23.1",
