--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,10 @@
     "@hookform/resolvers": "^3.6.0",
     "@matejmazur/react-katex": "^3.1.3",
     "@monaco-editor/react": "^4.6.0",
+    "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-navigation-menu": "^1.2.0",
+    "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
@@ -22,11 +24,14 @@
     "@radix-ui/react-toast": "^1.2.1",
     "@tanstack/react-query": "^5.48.0",
     "@tanstack/react-query-devtools": "^5.48.0",
+    "@types/lodash": "^4.17.6",
     "@types/markdown-to-jsx": "^7.0.1",
     "@types/react-katex": "^3.0.4",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "d3": "^7.9.0",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.396.0",
     "markdown-to-jsx": "^7.4.7",
     "react": "^18.3.1",
