--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,13 +1,8 @@
 {
-    "builds": [
-      {
-        "src": "package.json",
-        "use": "@vercel/next"
-      }
-    ],
-    "build": {
-      "env": {
-        "TS_NODE_TRANSPILE_ONLY": "true"
-      }
+    "buildCommand": "npm run build",
+    "outputDirectory": "dist",
+    "framework": "vite",
+    "environment": {
+      "VITE_IGNORE_TS_ERRORS": "true"
     }
   }
