--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.5",
     "@hookform/resolvers": "^3.6.0",
     "@matejmazur/react-katex": "^3.1.3",
     "@monaco-editor/react": "^4.6.0",
